--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
 	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 	<script src="app.js"></script>
 	<meta charset="UTF-8">
 	<title>FF Todo</title>
 </head>
 <body>
-Hello world!
+<div class="container">
+	<h1 class="display-3 my-5">Test Todo application</h1>
+	<div id="todo-container"></div>
+</div>
 </body>
 </html>
