--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,17 +30,42 @@
 				<div class="modal-body">
 					<form>
 						<div class="mb-3">
-							<label for="todo-name" class="col-form-label">Name:</label>
-							<input type="text" class="form-control" id="todo-name">
+							<label for="add-todo-name" class="col-form-label">Name:</label>
+							<input type="text" class="form-control" id="add-todo-name">
 						</div>
 						<div class="mb-3">
-							<label for="todo-description" class="col-form-label">Description:</label>
-							<textarea class="form-control" id="todo-description"></textarea>
+							<label for="add-todo-description" class="col-form-label">Description:</label>
+							<textarea class="form-control" id="add-todo-description"></textarea>
 						</div>
 					</form>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-primary" onclick="addTodo()" data-bs-dismiss="modal">Add</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal fade" id="editTodoModal" tabindex="-1">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="edit-todo-title"></h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+				</div>
+				<div class="modal-body">
+					<form>
+						<div class="mb-3">
+							<label for="edit-todo-name" class="col-form-label">Name:</label>
+							<input type="text" class="form-control" id="edit-todo-name">
+						</div>
+						<div class="mb-3">
+							<label for="edit-todo-description" class="col-form-label">Description:</label>
+							<textarea class="form-control" id="edit-todo-description"></textarea>
+						</div>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary" onclick="editTodo()" data-bs-dismiss="modal">Save</button>
 				</div>
 			</div>
 		</div>
