--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<title>FF Todo</title>
 	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
@@ -9,8 +11,6 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="app.js"></script>
-	<meta charset="UTF-8">
-	<title>FF Todo</title>
 </head>
 <body>
 <div class="container">
@@ -21,7 +21,8 @@
 				<h1 class="display-5 my-5">Todo</h1>
 				<div id="todo-container-phase0"></div>
 				<div class="d-grid gap-2">
-					<button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addTodoModal"><i class="bi bi-plus-lg"></i></button>
+					<button class="btn btn-primary" onclick="prepareAddModal()"
+							data-bs-toggle="modal" data-bs-target="#addTodoModal"><i class="bi bi-plus-lg"></i></button>
 				</div>
 			</div>
 		</div>
@@ -57,7 +58,9 @@
 						</div>
 						<div class="mb-3">
 							<label for="add-todo-description" class="col-form-label">Description:</label>
-							<textarea class="form-control" id="add-todo-description" maxlength="1024"></textarea>
+							<textarea class="form-control" id="add-todo-description" onkeyup="setTodoModalCharCount('add')"
+									  maxlength="1024"></textarea>
+							<span class="pull-right label label-default" id="add-todo-description-char-count"></span>
 						</div>
 						<div>
 						<label class="col-form-label">Phase:</label>
@@ -99,7 +102,9 @@
 						</div>
 						<div class="mb-3">
 							<label for="edit-todo-description" class="col-form-label">Description:</label>
-							<textarea class="form-control" id="edit-todo-description" maxlength="1024"></textarea>
+							<textarea class="form-control" id="edit-todo-description" onkeyup="setTodoModalCharCount('edit')"
+									  maxlength="1024"></textarea>
+							<span class="pull-right label label-default" id="edit-todo-description-char-count"></span>
 						</div>
 						<div>
 							<label class="col-form-label">Phase:</label>
