#16 shift Todos between phases directly with card buttons #17 attempt for placeholders in modals (add,edit)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -51,6 +51,7 @@
 						<div id="add-todo-name-form-group" class="mb-3">
 							<label for="add-todo-name" class="col-form-label">Name:</label>
 							<input type="text" class="form-control" id="add-todo-name"
+								   placeholder="Enter name for new Todo..."
 								   oninput="validateFormGroup('add-todo-name-form-group')" required>
 							<div id="add-todo-name-validator" class="invalid-feedback">
 								Please provide a name.
@@ -59,6 +60,7 @@
 						<div class="mb-3">
 							<label for="add-todo-description" class="col-form-label">Description:</label>
 							<textarea class="form-control" id="add-todo-description" onkeyup="setTodoModalCharCount('add')"
+									  placeholder="Enter description for new Todo (optional)..."
 									  maxlength="1024"></textarea>
 							<span class="pull-right label label-default" id="add-todo-description-char-count"></span>
 						</div>
@@ -95,6 +97,7 @@
 						<div id="edit-todo-name-form-group" class="mb-3">
 							<label for="edit-todo-name" class="col-form-label">Name:</label>
 							<input type="text" class="form-control" id="edit-todo-name"
+								   placeholder="Change name for this Todo..."
 								   oninput="validateFormGroup('edit-todo-name-form-group')" required>
 							<div id="edit-todo-name-validator" class="invalid-feedback">
 								Please provide a name.
@@ -103,6 +106,7 @@
 						<div class="mb-3">
 							<label for="edit-todo-description" class="col-form-label">Description:</label>
 							<textarea class="form-control" id="edit-todo-description" onkeyup="setTodoModalCharCount('edit')"
+									  placeholder="Change description for this Todo..."
 									  maxlength="1024"></textarea>
 							<span class="pull-right label label-default" id="edit-todo-description-char-count"></span>
 						</div>
