#14 character count pulled to right

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -108,7 +108,10 @@
 							<textarea class="form-control" id="edit-todo-description" onkeyup="setTodoModalCharCount('edit')"
 									  placeholder="Change description for this Todo..."
 									  maxlength="1024"></textarea>
-							<span class="pull-right label label-default" id="edit-todo-description-char-count"></span>
+							<div class="text-end">
+								<span class="badge rounded-pill bg-secondary" id="edit-todo-description-char-count"></span>
+							</div>
+
 						</div>
 						<div>
 							<label class="col-form-label">Phase:</label>
