#23 Create JS template for generating modals (moved from index.html to app.js) FIX: Reset phase on modal after adding new Todo FIX: Wait for loading page before calling prepare and fetch functions

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,101 +39,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="modal fade" id="addTodoModal" tabindex="-1">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title">Add Todo</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-				</div>
-				<div class="modal-body">
-					<form novalidate>
-						<div id="add-todo-name-form-group" class="mb-3">
-							<label for="add-todo-name" class="col-form-label">Name:</label>
-							<input type="text" class="form-control" id="add-todo-name"
-								   placeholder="Enter name for new Todo..."
-								   oninput="App.validateFormGroup('add-todo-name-form-group')" required>
-							<div id="add-todo-name-validator" class="invalid-feedback">
-								Please provide a name.
-							</div>
-						</div>
-						<div class="mb-3">
-							<label for="add-todo-description" class="col-form-label">Description:</label>
-							<textarea class="form-control" id="add-todo-description" onkeyup="App.setTodoModalCharCount('add')"
-									  placeholder="Enter description for new Todo (optional)..."
-									  maxlength="1024"></textarea>
-							<span class="pull-right label label-default" id="add-todo-description-char-count"></span>
-						</div>
-						<div>
-						<label class="col-form-label">Phase:</label>
-						</div>
-						<div class="btn-group" role="group">
-							<input type="radio" class="btn-check" name="add-todo-phase" id="add-todo-phase0" value="0" checked>
-							<label class="btn btn-outline-primary" for="add-todo-phase0">Todo</label>
-
-							<input type="radio" class="btn-check" name="add-todo-phase" id="add-todo-phase1" value="1">
-							<label class="btn btn-outline-primary" for="add-todo-phase1">In progress</label>
-
-							<input type="radio" class="btn-check" name="add-todo-phase" id="add-todo-phase2" value="2">
-							<label class="btn btn-outline-primary" for="add-todo-phase2">Done</label>
-						</div>
-					</form>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-primary" onclick="App.addTodo()" data-bs-dismiss="modal">Add</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="modal fade" id="editTodoModal" tabindex="-1">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="edit-todo-title"></h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-				</div>
-				<div class="modal-body">
-					<form novalidate>
-						<div id="edit-todo-name-form-group" class="mb-3">
-							<label for="edit-todo-name" class="col-form-label">Name:</label>
-							<input type="text" class="form-control" id="edit-todo-name"
-								   placeholder="Change name for this Todo..."
-								   oninput="App.validateFormGroup('edit-todo-name-form-group')" required>
-							<div id="edit-todo-name-validator" class="invalid-feedback">
-								Please provide a name.
-							</div>
-						</div>
-						<div class="mb-3">
-							<label for="edit-todo-description" class="col-form-label">Description:</label>
-							<textarea class="form-control" id="edit-todo-description" onkeyup="App.setTodoModalCharCount('edit')"
-									  placeholder="Change description for this Todo..."
-									  maxlength="1024"></textarea>
-							<div class="text-end">
-								<span class="badge rounded-pill bg-secondary" id="edit-todo-description-char-count"></span>
-							</div>
-
-						</div>
-						<div>
-							<label class="col-form-label">Phase:</label>
-						</div>
-						<div class="btn-group" role="group">
-							<input type="radio" class="btn-check" name="edit-todo-phase" id="edit-todo-phase0" value="0">
-							<label class="btn btn-outline-primary" for="edit-todo-phase0">Todo</label>
-
-							<input type="radio" class="btn-check" name="edit-todo-phase" id="edit-todo-phase1" value="1">
-							<label class="btn btn-outline-primary" for="edit-todo-phase1">In progress</label>
-
-							<input type="radio" class="btn-check" name="edit-todo-phase" id="edit-todo-phase2" value="2">
-							<label class="btn btn-outline-primary" for="edit-todo-phase2">Done</label>
-						</div>
-					</form>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-primary" onclick="App.editTodo()" data-bs-dismiss="modal">Save</button>
-				</div>
-			</div>
-		</div>
-	</div>
+	<div id="modal-container"></div>
 </div>
 </body>
 </html>
