#26 Create Task entity Add task on UI with modal FIX: app.js code with indentation FIX: rename some prepare functions (inserting Todo)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,7 +21,7 @@
 				<h1 class="display-5 my-5">Todo</h1>
 				<div id="todo-container-phase0"></div>
 				<div class="d-grid gap-2">
-					<button class="btn btn-primary" onclick="App.prepareAddModal()" data-bs-toggle="modal" data-bs-target="#addTodoModal"
+					<button class="btn btn-primary" onclick="App.prepareAddTodoModal()" data-bs-toggle="modal" data-bs-target="#addTodoModal"
 							data-toggle="tooltip" data-placement="bottom" title="Add new Todo"><i class="bi bi-plus-lg"></i></button>
 				</div>
 			</div>
