--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,7 +23,8 @@
 				<div class="d-grid gap-2">
 					<button class="btn btn-primary" onclick="App.prepareAddTodoModal()" data-bs-toggle="modal" data-bs-target="#addTodoModal"
 							data-toggle="tooltip" data-placement="bottom" title="Add new Todo"><i class="bi bi-plus-lg"></i></button>
-					<button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#remove-all-todos-confirm-modal"
+					<button type="button" class="btn btn-danger btn-sm" id="remove-all-todos-button"
+							data-bs-toggle="modal" data-bs-target="#remove-all-todos-confirm-modal"
 							data-toggle="tooltip" data-placement="bottom" title="Remove all Todos"><i class="bi bi-trash"></i></button>
 				</div>
 			</div>
