--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/jquery.growl@1.3.5/javascripts/jquery.growl.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.growl@1.3.5/stylesheets/jquery.growl.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="app.js"></script>
 </head>
@@ -25,7 +26,7 @@
 							data-toggle="tooltip" data-placement="bottom" title="Add new Todo"><i class="bi bi-plus-lg"></i></button>
 					<button type="button" class="btn btn-danger btn-sm" id="remove-all-todos-button"
 							data-bs-toggle="modal" data-bs-target="#remove-all-todos-confirm-modal"
-							data-toggle="tooltip" data-placement="bottom" title="Remove all Todos"><i class="bi bi-trash"></i></button>
+							data-toggle="tooltip" data-placement="bottom" title="Remove all Todos"><i class="fas fa-broom"></i></button>
 				</div>
 			</div>
 		</div>
