--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,12 @@
 <body>
 <div class="container">
 	<h1 class="display-3 my-5">Test Todo application</h1>
+	<div class>
+		<button class="btn btn-primary" onclick="App.prepareTodoSortingModal()" data-bs-toggle="modal" data-bs-target="#todo-sorting-modal"
+				data-toggle="tooltip" data-placement="bottom" title="Sort Todos">Sort</button>
+		<button class="btn btn-secondary" onclick="App.deleteTodoSorting()"
+				data-toggle="tooltip" data-placement="bottom" title="Reset sorting Todos">Reset</button>
+	</div>
 	<div class="row">
 		<div class="col">
 			<div>
