#13 Add sorting of Todos vertical radio buttons in sorting modal better layout of sorting toolbar (separate property-direction display)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,13 +15,14 @@
 <body>
 <div class="container">
 	<h1 class="display-3 my-5">Test Todo application</h1>
-	<div>
-		Sorting:
-		<button class="btn btn-primary" onclick="App.prepareTodoSortingModal()" data-bs-toggle="modal" data-bs-target="#todo-sorting-modal"
+	<div class="d-flex flex-row">
+		<div>Sorting:</div>
+		<button class="btn btn-primary mx-3" onclick="App.prepareTodoSortingModal()" data-bs-toggle="modal" data-bs-target="#todo-sorting-modal"
 				data-toggle="tooltip" data-placement="bottom" title="Sort Todos">Sort</button>
-		<button class="btn btn-secondary" onclick="App.deleteTodoSorting()"
+		<button class="btn btn-secondary mx-1" onclick="App.deleteTodoSorting()"
 				data-toggle="tooltip" data-placement="bottom" title="Reset sorting Todos">Reset</button>
-		<div id="display-sorting-active"></div>
+		<div class="mx-1" id="display-active-sorting-prop"></div>
+		<div class="mx-1" id="display-active-sorting-dir"></div>
 	</div>
 	<div class="row">
 		<div class="col">
