#13 Add sorting of Todos - sort Tasks by name create modal for Task sorting show active Task sorting on Todo card create Task sorting toolbar in header (updated Todo sorting toolbar to avoid name conflicts) NOTE: Tasks sorted by JS function not TaskService method NOTE: Task sorting applied on all Todos

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,14 +15,23 @@
 <body>
 <div class="container">
 	<h1 class="display-3 my-5">Test Todo application</h1>
-	<div class="d-flex flex-row">
-		<div>Sorting:</div>
+	<div class="d-flex flex-row my-3">
+		<div>Sorting Todos:</div>
 		<button class="btn btn-primary mx-3" onclick="App.prepareTodoSortingModal()" data-bs-toggle="modal" data-bs-target="#todo-sorting-modal"
 				data-toggle="tooltip" data-placement="bottom" title="Sort Todos">Sort</button>
 		<button class="btn btn-secondary mx-1" onclick="App.deleteTodoSorting()"
 				data-toggle="tooltip" data-placement="bottom" title="Reset sorting Todos">Reset</button>
-		<div class="mx-1" id="display-active-sorting-prop"></div>
-		<div class="mx-1" id="display-active-sorting-dir"></div>
+		<div class="mx-1" id="display-active-todo-sorting-prop"></div>
+		<div class="mx-1" id="display-active-todo-sorting-dir"></div>
+	</div>
+	<div class="d-flex flex-row">
+		<div>Sorting Tasks:</div>
+		<button class="btn btn-primary mx-3" onclick="App.prepareTaskSortingModal()" data-bs-toggle="modal" data-bs-target="#task-sorting-modal"
+				data-toggle="tooltip" data-placement="bottom" title="Sort Tasks">Sort</button>
+		<button class="btn btn-secondary mx-1" onclick="App.deleteTaskSorting()"
+				data-toggle="tooltip" data-placement="bottom" title="Reset sorting Tasks">Reset</button>
+		<div class="mx-1" id="display-active-task-sorting-prop"></div>
+		<div class="mx-1" id="display-active-task-sorting-dir"></div>
 	</div>
 	<div class="row">
 		<div class="col">
