--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,7 +49,7 @@
 				<h1 class="display-5 my-5">Todo</h1>
 				<div id="todo-container-phase0"></div>
 				<div class="d-grid gap-2">
-					<button class="btn btn-primary" onclick="App.prepareAddTodoModal()" data-bs-toggle="modal" data-bs-target="#addTodoModal"
+					<button class="btn btn-primary" onclick="App.prepareAddTodoModal(true)" data-bs-toggle="modal" data-bs-target="#addTodoModal"
 							data-toggle="tooltip" data-placement="bottom" title="Add new Todo"><i class="fas fa-plus"></i></button>
 					<button type="button" class="btn btn-danger btn-sm" id="remove-all-todos-button"
 							data-bs-toggle="modal" data-bs-target="#remove-all-todos-confirm-modal"
