--- a/src/main/webapp/app/directives/card_tpl.html
+++ b/src/main/webapp/app/directives/card_tpl.html
@@ -1,7 +1,7 @@
 <div class="card border border-primary mb-3" ng-if="isCardValid">
     <div class="card-header">
         <h5 class="card-title">
-            <span class="text-muted" data-toggle="tooltip" data-placement="bottom" title="Todo ID">#{{ id }}</span>
+            <span class="text-muted" data-toggle="tooltip" data-placement="bottom" title="Todo ID">#{{ _id }}</span>
             <span data-toggle="tooltip" data-placement="bottom" title="Todo name">{{ name }}</span>
         </h5>
     </div>
