--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <title>FF Todo</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.6/ui-bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
             rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -56,11 +59,6 @@
                 <i class="fas fa-broom"></i>
             </button>
         </div>
-        <p>Todo count:
-            <span class="badge badge-pill bg-secondary">
-                {{ todo_list_count }}
-            </span>
-        </p>
     </div>
     <div>
         <tsz-todo-modal modalprefix="add" modaltitle="Add Todo"
