#41 Transition to AngularJS index.html: fixed usage of 'todo list per phase' directive controller.js: removed array for phase labels + removed moment transform for Todo date fields card_directive.js: attempt to merge scope variables - success card_tpl.html: issue related to card_directive.js - renames todo_phase_directive.js: removed phase-related stuff todo_phase_tpl.html: fixed tszCard directive usage

--- a/src/main/webapp/app/directives/card_tpl.html
+++ b/src/main/webapp/app/directives/card_tpl.html
@@ -17,7 +17,7 @@
             <li class="list-group-item">
                 <ul class="list-group border border-primary"
                         data-toggle="tooltip" data-placement="bottom" title="Task list">
-                    <li class="list-group-item" ng-repeat="task in tasks2" ng-if="taskCount">
+                    <li class="list-group-item" ng-repeat="task in tasks" ng-if="taskCount">
                         {{ task.name }}
                     </li>
                     <li class="list-group-item" ng-if="!taskCount">
