--- a/src/main/webapp/app/directives/todo_phase_tpl.html
+++ b/src/main/webapp/app/directives/todo_phase_tpl.html
@@ -1,10 +1,6 @@
-<h1 class="display-5 mt-1 mb-3">{{ phasename }}</h1>
 <div ng-if="todoSubListNotEmpty">
     <div ng-repeat="todo in todoSubList">
-        <tsz-card id="{{todo.id}}" name="{{todo.name}}" description="{{todo.description}}"
-                phase="{{todo.phase}}" phasenum="{{phasenum}}"
-                datemodified="{{todo.dateModified}}" datecreated="{{todo.dateCreated}}"
-                tasks="{{todo.tasks}}"></tsz-card>
+        <tsz-card content="{{todo}}"></tsz-card>
     </div>
 </div>
 <tsz-todo-emptiness-indicator ng-if="!todoSubListNotEmpty"></tsz-todo-emptiness-indicator>
